# Cargo.toml

[package]
name = "flight_brain"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
# none

[dev-dependencies]
libc = { version = "0.2", default-features = false, features = [] }
libc_alloc = "1.0"
libc-print = "0.1.22"
hashbrown = "0.14.3"

